monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4054/A4054.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4054;

grammar A4054 {

  A = "";

}
